# src/modules/postCreditScenes/dtos/IFindAllPostCreditScenesDTO.ts
@@ -1,0 +1,10 @@
+import { FilterClause, OrderClause } from '@shared/infra/http/listParams';
+import { PostCreditSceneColumn } from '@modules/postCreditScenes/entities/postCreditSceneColumns';
+
+export default interface IFindAllPostCreditScenesDTO {
+  page?: number;
+  limit?: number;
+  columns?: PostCreditSceneColumn[];
+  order?: OrderClause<PostCreditSceneColumn>[];
+  filter?: FilterClause<PostCreditSceneColumn>[];
+}
