# src/modules/tvshows/entities/ITVShow.ts
@@ -14,6 +14,7 @@ export default interface ITVShow {
   phase?: number;
   saga?: string;
   chronology?: number;
+  post_credit_scenes: number;
   imdb_id?: string;
   updated_at?: Date;
 
